<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_building_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uah.uahnavigation.BuildingTabActivity">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:padding="20dp"
        android:id="@+id/spinnerBuilding" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:padding="20dp"
        android:id="@+id/spinnerRoom" />

    <Button
        android:text="RETURN"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/findbtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp"
        android:id="@+id/returnbtn" />

    <TextView
        android:text="BUILDING LOOK UP"
        android:textSize="19dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="FIND"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:id="@+id/findbtn"
        android:layout_below="@+id/spinnerRoom"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:text="Building"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="29dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <TextView
        android:text="Room"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/spinnerBuilding"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>
