...
    tools:context="edu.uah.uahnavigation.MainActivity">


    <!--Temporary code used for testing the first use of espresso for acceptance testing can be removed later-->

    <Button
        android:id="@+id/classbtn"
        android:text="CLASS"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
...

    <Button
        android:text="BUILDING"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildingbtn"
        android:layout_below="@+id/classbtn"
        android:layout_alignLeft="@+id/classbtn"
        android:layout_alignStart="@+id/classbtn" />

    <TextView
        android:text="Where would you like to go?"
...
